Views a11y: Use AX_ROLE_POP_UP_BUTTON for views::Combobox.

AX_ROLE_COMBO_BOX is for UI elements with an editable textfield, which
views::Combobox does not have. views::Combobox operates most like an
HTML <select> element, which is given kPopUpButtonRole in Blink's
AXNodeObject.cpp (or kListBoxRole if it allows multiple selection).

Use AX_ROLE_POP_UP_BUTTON for views::Combobox on all platforms.

BUG=657900, 663536

Review-Url: https://codereview.chromium.org/2946783003
Cr-Commit-Position: refs/heads/master@{#481163}

Former-commit-id: d16b69bc237e5f5d2cc75681aec6d2c130a05f14